// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileInfoPanel /> renders profile info correctly when rating is not null 1`] = `
<div
  className="panel panel-success"
>
  <div
    className="panel-heading"
  >
    <h3
      className="panel-title"
    >
      Profile Info
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <p>
      First Name: 
      Abc
    </p>
    <p>
      Last Name: 
      Def
    </p>
    <p>
      Gender: 
      male
    </p>
    <p>
      Education: 
      Graduate
    </p>
    <p>
      Date of Birth: 
      10th Jun 1990
    </p>
    <p>
      Marital Status: 
      Single
    </p>
    <p>
      Address: 
      119,bajiprabhunagar,Nagpur
    </p>
    <p>
      City: 
      Nagpur
    </p>
    <p>
      State: 
      IN-MH
    </p>
    <p>
      Pincode: 
      440033
    </p>
    <p>
      Report Rating: 
      <strong
        className="text-success"
      >
        Good
      </strong>
    </p>
    <p>
      Auditor Rating: (
      <a
        onClick={[Function]}
        style={Object {}}
      >
        change
      </a>
      )
      <br />
      <br />
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": "inherit",
          }
        }
      >
        <li>
          <label>
            <b>
              Overall
            </b>
          </label>
            
          <span>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
          </span>
        </li>
        <li>
          <b>
            1
             Star    
            <span>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
            </span>
              
            20
            %
          </b>
        </li>
        <li>
          <b>
            2
             Star    
            <span>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
            </span>
              
            30
            %
          </b>
        </li>
        <li>
          <b>
            3
             Star    
            <span>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
            </span>
              
            10
            %
          </b>
        </li>
        <li>
          <b>
            4
             Star    
            <span>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#ccc",
                  }
                }
              >
                ★
              </label>
            </span>
              
            40
            %
          </b>
        </li>
        <li>
          <b>
            5
             Star    
            <span>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
              <label
                style={
                  Object {
                    "color": "#f90",
                  }
                }
              >
                ★
              </label>
            </span>
              
            0
            %
          </b>
        </li>
      </ul>
    </p>
  </div>
</div>
`;

exports[`<ProfileInfoPanel /> renders profile info correctly when rating is null 1`] = `
<div
  className="panel panel-success"
>
  <div
    className="panel-heading"
  >
    <h3
      className="panel-title"
    >
      Profile Info
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <p>
      First Name: 
      Abc
    </p>
    <p>
      Last Name: 
      Def
    </p>
    <p>
      Gender: 
      male
    </p>
    <p>
      Education: 
      Graduate
    </p>
    <p>
      Date of Birth: 
      10th Jun 1990
    </p>
    <p>
      Marital Status: 
      Single
    </p>
    <p>
      Address: 
      119,bajiprabhunagar,Nagpur
    </p>
    <p>
      City: 
      Nagpur
    </p>
    <p>
      State: 
      IN-MH
    </p>
    <p>
      Pincode: 
      440033
    </p>
    <p>
      Report Rating: 
    </p>
    <p>
      Auditor Rating: (
      <a
        onClick={[Function]}
        style={Object {}}
      >
        change
      </a>
      )
      <br />
      <br />
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": "inherit",
          }
        }
      >
        <li>
          <label>
            <b>
              Overall
            </b>
          </label>
            
          <span>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
            <label
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              ★
            </label>
          </span>
        </li>
      </ul>
    </p>
  </div>
</div>
`;
